Fix word wrap in dropdown menus

--- a/sources/stylesheets/menus/_menu.scss
+++ b/sources/stylesheets/menus/_menu.scss
@@ -105,6 +105,7 @@
       display: flex;
       flex-direction: column;
       z-index: $z-index-dropdown;
+      width: max-content;
     }
 
     .dropdown-menu-children .menu-item-wrapper .menu-item {
